--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,17 @@
     --fw-reg: 300;
     --fw-bold: 900;
 
-    --color-light: #FFFFFF;
-    --color-dark: #303030;
-    --color-accent: #16e0db;
+    --color-light: #FDF7FF;
+    --color-dark: #2b223a;
+    --color-accent: #7510F7;
+    --color-medium:#9B89B4;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
-    --boxShadow: 0.25em 0.25em 0.75em rgba(0,0,0,.3);
+    --boxShadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, .3);
 }
 
 @media (min-width: 800px) {
@@ -35,6 +36,10 @@
 
 /* General Styles */
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     background: var(--color-light);
     color: var(--color-dark);
@@ -44,7 +49,7 @@ body {
     line-height: 1.6;
 }
 
-section{
+section {
     padding: 5em 2em;
 }
 
@@ -64,12 +69,12 @@ strong {
 
 .btn {
     display: inline-block;
-    padding:  1em 2.5em;
-    background: var(--color-accent);
+    padding: 1em 2.1em;
+    background: var(--color-medium);
     color: var(--color-dark);
     text-decoration: none;
     cursor: pointer;
-    font-size: .8rem;
+    font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: var(--fw-bold);
@@ -110,7 +115,7 @@ h3 {
     font-weight: var(--fw-reg);
 }
 
-.section__title--intro strong{
+.section__title--intro strong {
     display: block;
 }
 
@@ -120,28 +125,134 @@ h3 {
 }
 
 .section__subtitle--intro,
-.section__subtitle--about{
+.section__subtitle--about {
     background: var(--color-accent);
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
 }
 
-.section__subtitle--work{
-    color: var(--color-accent);
+.section__subtitle--work {
+    color: var(--color-light);
     font-weight: var(--fw-bold);
-    margin-bottom: 2em;
+    margin-bottom: 5em;
 }
 
 
 /* Header */
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
 
-nav{ display: none;}
+.logo {
+    max-width: 100px;
+}
+
+.nav {
+    position: fixed;
+    background: var(--color-dark);
+    color: var(--color-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav__list {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h3);
+}
+
+.nav__link:hover {
+    color: var(--color-accent);
+}
+
+.nav-toggle {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.nav-open .nav {
+    transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(135deg);
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--color-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
+}
+
 
 /* Intro Section */
 
-.intro{
+.intro {
     position: relative;
+    padding-bottom: 11em;
 }
 
 /* .intro__img{
@@ -149,25 +260,25 @@ nav{ display: none;}
 } */
 
 @media (min-width: 600px) {
-    .intro{
+    .intro {
         display: grid;
         width: min-content;
         margin: 0 auto;
         grid-column-gap: 1em;
-        grid-template-areas: 
-        "img title"
-        "img subtitle";
+        grid-template-areas:
+            "img title"
+            "img subtitle";
         grid-template-columns: min-content max-content;
     }
 
-    .intro__img{
+    .intro__img {
         grid-area: img;
         min-width: 250px;
         position: relative;
         z-index: 2;
     }
 
-    .section__subtitle--intro{
+    .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
         grid-row: 2;
@@ -181,16 +292,18 @@ nav{ display: none;}
 /* Skills section */
 
 .my-skills {
-background-color: var(--color-dark);
-background-image: url(../images/pandaLogo.png);
-background-size: cover;
-color: var(--color-light);
-text-align: center;
+    background-color: var(--color-dark);
+    /* background-image: url(../images/pandaLogo.png); */
+    background: var(--color-dark);
+    background-size: cover;
+    color: var(--color-light);
+    text-align: center;
 }
 
 .section__title--skills {
-    color: var(--color-accent);
+    color: var(--color-light);
     position: relative;
+    padding-bottom: 1em;
 }
 
 .section__title--skills::after {
@@ -203,25 +316,42 @@ text-align: center;
     opacity: 0.25;
 }
 
+.skill-header{
+    padding-bottom: 1em;
+    /* color: var(--color-accent); */
+    height: 60px;
+}
+
+.skill-img{
+    max-width: 100px;
+    margin: 0 auto;
+    padding-bottom: 2.5em;
+}
+
 .skills {
-    margin-bottom: 4em;
+    margin-bottom: 6em;
 }
 
 .skill {
     max-width: 500px;
     margin: 0 auto;
+    padding: 0 1em;
+    padding-bottom: 4em;
 }
 
 @media (min-width: 800px) {
-    .skills{
+    .skills {
         display: flex;
         max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
     }
 
-    .skills + .skills {
+    .skills+.skills {
         margin-left: 2em;
+    }
+    .skill{
+        padding-bottom: 0;
     }
 }
 
@@ -233,21 +363,21 @@ text-align: center;
 }
 
 @media (min-width: 600px) {
-    .about-me{
+    .about-me {
         display: grid;
         grid-template-columns: 1fr 250px;
         grid-template-areas:
-        "title img"
-        "subtitle img"
-        "text img";
+            "title img"
+            "subtitle img"
+            "text img";
         grid-column-gap: 1em;
     }
 
-    .section__subtitle--about{
+    .section__subtitle--about {
         grid-area: title;
     }
 
-    .section__subtitle--about{
+    .section__subtitle--about {
         grid-column: 1 / -1;
         grid-row: 2;
         position: relative;
@@ -257,61 +387,71 @@ text-align: center;
         padding-right: calc(200px + 4em);
     }
 
-    .about-me__img{
+    .about-me__img {
         grid-area: img;
         position: relative;
         z-index: 2;
-        }
+    }
 }
 
 
 
 /* MyWork */
-.my-work{
-    background-color: var(--color-dark);
+.my-work {
+    background-color: var(--color-accent);
     color: var(--color-light);
     text-align: center;
 }
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    max-width: 1000px;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    max-width: 1200px;
     margin: 0 auto;
 }
 
 .portfolio__item {
-    background: var(--color-accent);
+    padding: 1em;
     overflow: hidden;
+    text-decoration: none;
 }
 
 .portfolio__img {
+    border-radius: 2%;
+    display: inline;
     transition: transform 750ms cubic-bezier(.5, 0, .5, 1),
-    opacity 250ms linear;
+        opacity 250ms linear;
 }
 
-.portfolio__item:focus{
+.portfolio__item:focus {
     position: relative;
     z-index: 2;
 }
 
 .portfolio__img:hover,
 .portfolio__item:focus .portfolio__img {
-    transform: scale(1.2);
-    opacity: .75;
+    transform: scale(1.06);
+    opacity: .65;
 }
+
+.portfolio__item--info {
+    color: var(--color-light);
+    font-size: var(--fs-h3);
+
+    text-align: center;
+  }
 
 
 /* Footer */
-.footer{
+.footer {
     background: #111;
     color: var(--color-accent);
     text-align: center;
-    padding: 2.5em 0;   
-    font-size: var(--fs-h3);    
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);
 }
 
-.footer a{
+.footer a {
     color: inherit;
 }
 
@@ -324,7 +464,7 @@ text-align: center;
     opacity: .7;
 }
 
-.footer__link:hover{
+.footer__link:hover {
     text-decoration: underline;
 }
 
