--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 *,
 *::before,
 *::after {
@@ -8,14 +9,18 @@
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
     --ff-secondary: 'Source Code Pro', monospace;
+    --ff-thin: 'Alegreya Sans', sans-serif;
+    --ff-quick: 'Quicksand', sans-serif;
 
     --fw-reg: 300;
     --fw-bold: 900;
 
     --color-light: #FDF7FF;
+    --color-light-dark: #615b6d8a;
     --color-dark: #2b223a;
-    --color-accent: #5510f7;
-    --color-medium:#9B89B4;
+    --color-accent: #320fce;
+    --color-medium:#7510F7;
+    --color-accentTwo: #6929ff;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -35,7 +40,12 @@
 }
 
 /* General Styles */
-
+p, span{
+    font-family: var(--ff-thin);
+}
+h1, h2, h3, h4 {
+    font-family: var(--ff-quick);
+}
 html{
     scroll-behavior: smooth;
 }
@@ -63,21 +73,23 @@ strong {
 }
 
 :focus {
-    outline: 3px solid var(--color-accent);
+    outline: 3px solid var(--color-accentTwo);
     outline-offset: 3px;
 }
 
 .btn {
     display: inline-block;
     padding: 1em 2.1em;
-    background: var(--color-medium);
-    color: var(--color-dark);
+    background: var(--color-accentTwo);
+    color: var(--color-light);
     text-decoration: none;
     cursor: pointer;
     font-size: 1rem;
+    border-radius: 10px;
+    font-family: var(--ff-quick);
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-weight: var(--fw-bold);
+    font-weight: 700;
     transition: transform 200ms ease-in-out;
 }
 
@@ -107,9 +119,7 @@ h3 {
     font-size: var(--fs-h3);
 }
 
-.section__title {
-    margin-bottom: .25em;
-}
+
 
 .section__title--intro {
     font-weight: var(--fw-reg);
@@ -126,16 +136,34 @@ h3 {
 
 .section__subtitle--intro,
 .section__subtitle--about {
-    background: var(--color-accent);
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
+    position: relative;
+    color: var(--color-light);
+    font-size: var(--fs-h3);
+}
+.banner-text{
+    position: absolute;
+    top: -0.05rem;
+    left: 14rem; 
+    right: 0rem; 
+    margin-left: auto; 
+    margin-right: auto;
+    width: 300px;
+}
+.banner {
+    width: 100%;
 }
 
+.section__title--work{
+margin-top: 5rem;
+}
 .section__subtitle--work {
-    color: var(--color-light);
+    color: var(--color-accentTwo);
     font-weight: var(--fw-bold);
-    margin-bottom: 5em;
+    margin-bottom: 1em;
+    padding-top: 1.5rem;
 }
 
 
@@ -252,30 +280,42 @@ header {
 
 .intro {
     position: relative;
-    padding-bottom: 11em;
+    padding-bottom: 10rem;
 }
 
-/* .intro__img{
-    box-shadow: var(--boxShadow);
-} */
+
 
 @media (min-width: 600px) {
     .intro {
         display: grid;
-        width: min-content;
+        max-width: 800px;
         margin: 0 auto;
         grid-column-gap: 1em;
         grid-template-areas:
             "img title"
             "img subtitle";
-        grid-template-columns: min-content max-content;
+        justify-items: center;
+    }
+    .intro-round{
+        border-radius: 50%;
+        width: 400px;
+        height: 400px;
+        overflow: hidden;
+        background-color: var(--color-accentTwo);
+        position: relative;
+        z-index: 2;
     }
 
     .intro__img {
         grid-area: img;
-        min-width: 250px;
-        position: relative;
-        z-index: 2;
+
+    }
+    .section__title--intro {
+        grid-area: title;
+        min-width: 300px;
+    }
+    .section__title--intro:hover {
+        transform: rotate(5deg);
     }
 
     .section__subtitle--intro {
@@ -283,9 +323,74 @@ header {
         grid-column: -1 / 1;
         grid-row: 2;
         text-align: right;
-        left: -1.5em;
+
+        top: -6rem;
         width: calc(100% + 1.5em);
     }
+}
+.banner-text-container{
+    text-transform: uppercase;
+    position: absolute;
+    right: 6rem;
+    left: 0;
+    top: 1.3rem;
+}
+.animate span {
+	display: inline-block;
+}
+.animate span:nth-of-type(2) {
+	animation-delay: .5s;
+}
+.animate span:nth-of-type(3) {
+	animation-delay: .6s;
+}
+.animate span:nth-of-type(4) {
+	animation-delay: .7s;
+}
+.animate span:nth-of-type(5) {
+	animation-delay: .8s;
+}
+.animate span:nth-of-type(6) {
+	animation-delay: .9s;
+}
+.animate span:nth-of-type(7) {
+	animation-delay: 1s;
+}
+.animate span:nth-of-type(8) {
+	animation-delay: 1.1s;
+}
+.animate span:nth-of-type(9) {
+	animation-delay: 1.2s;
+}
+.animate span:nth-of-type(10) {
+	animation-delay: 1.3s;
+}
+.animate span:nth-of-type(11) {
+	animation-delay: 1.4s;
+}
+.animate span:nth-of-type(12) {
+	animation-delay: 1.5s;
+}
+.animate span:nth-of-type(13) {
+	animation-delay: 1.6s;
+}
+
+.rolling-letters span{
+	opacity: 0;
+	transform: translate(-160px, -60px) rotate(-180deg) scale(4);
+	animation: revolveScale .5s forwards;
+
+}
+
+@keyframes revolveScale {
+	60% {
+		transform: translate(20px, 20px) rotate(30deg) scale(.2);
+	}
+
+	100% {
+		transform: translate(0) rotate(0) scale(1);
+		opacity: 1;
+	}
 }
 
 
@@ -293,8 +398,8 @@ header {
 
 .my-skills {
     
-    background-image: url(../images/laptop.jpg);
-    background-color: var(--color-dark);
+    /* background-image: url(../images/laptop.jpg); */
+    background-color: var(--color-accentTwo);
     background-size: cover;
     color: var(--color-light);
     text-align: center;
@@ -303,7 +408,6 @@ header {
 .section__title--skills {
     color: var(--color-light);
     position: relative;
-    padding-bottom: 1em;
 }
 
 .section__title--skills::after {
@@ -321,39 +425,60 @@ header {
     /* color: var(--color-accent); */
     height: 60px;
 }
+.skill-subheader{
+    color: var(--color-accentTwo);
+    font-family: var(--ff-quick);
+}
 
 .skill-img{
     max-width: 100px;
     margin: 0 auto;
+    padding-top: 2.5em;
     padding-bottom: 2.5em;
 }
 
+.skills-container{
+    height: 590px;
+}
+.skills-wrapper{
+    position: absolute;
+    right: 0;
+    left: 0;
+}
 .skills {
-    margin-bottom: 6em;
+    margin-bottom: 4em;
+    display: flex;
+    justify-content: center;
+    min-height: 450px;
+    text-align: center;
+    margin-top: -13rem;
+}
+.skill:last-child{
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-left-color: transparent;
+}
+.skill:first-child{
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-right-color: transparent;
 }
 
 .skill {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 0 1em;
+    padding: 0 3em;
     padding-bottom: 4em;
+    background-color: var(--color-light);
+    color: var(--color-dark);
+    border-color: var(--color-light-dark);
+    border-style: solid;
+
+}
+.work-btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 22em;
 }
 
-@media (min-width: 800px) {
-    .skills {
-        display: flex;
-        max-width: 1000px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .skills+.skills {
-        margin-left: 2em;
-    }
-    .skill{
-        padding-bottom: 0;
-    }
-}
 
 
 /* About me */
@@ -398,48 +523,68 @@ header {
 
 /* MyWork */
 .my-work {
-    background-color: var(--color-accent);
-    color: var(--color-light);
+    background-color: var(--color-light);
+    color: var(--color-dark);
     text-align: center;
 }
 
-.portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.portfolio__item {
-    padding: 1em;
-    overflow: hidden;
-    text-decoration: none;
-}
-
-.portfolio__img {
-    border-radius: 2%;
-    display: inline;
-    transition: transform 750ms cubic-bezier(.5, 0, .5, 1),
-        opacity 250ms linear;
-}
-
-.portfolio__item:focus {
+.cards{
+    display: flex;
     position: relative;
-    z-index: 2;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-
-.portfolio__img:hover,
-.portfolio__item:focus .portfolio__img {
-    transform: scale(1.06);
-    opacity: .65;
+.card-item{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 550px;
+    height: 550px;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden;
 }
-
-.portfolio__item--info {
-    color: var(--color-light);
-    font-size: var(--fs-h3);
-
-    text-align: center;
+.card-item:hover{
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.card-item:hover img {
+    transform: scale(1.25);
   }
+.card-item-img{
+    height: 100%;
+    transition: 0.25s;
+}
+.card-item:hover figcaption{
+    bottom: 0;
+}
+.card-item-img{
+    height: 100%;
+    transition: 0.25s;
+}
+.card-item figcaption{
+    position: absolute;
+    bottom: -70%;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    color: white;
+    line-height: 1;
+    transition: 0.25s;
+}
+.card-item-header{
+    margin: 0 0 20px;
+    padding: 0;
+}
+.card-item-info{
+    font-size: 14px;
+    line-height: 1.75;
+}
 
 
 /* Footer */
