--- a/css/style.css
+++ b/css/style.css
@@ -24,20 +24,13 @@
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
-    --fs-h3: 1.25rem;
-    --fs-body: 1rem;
+    --fs-h3: 1.4rem;
+    --fs-h4: 1.15rem;
+    --fs-body: 1.05rem;
 
     --boxShadow: 0.25em 0.25em 0.75em rgba(0, 0, 0, .3);
 }
 
-@media (min-width: 800px) {
-    :root {
-        --fs-h1: 4.5rem;
-        --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
-        --fs-body: 1.125rem;
-    }
-}
 
 /* General Styles */
 p, span{
@@ -45,6 +38,12 @@ p, span{
 }
 h1, h2, h3, h4 {
     font-family: var(--ff-quick);
+}
+h3{
+    font-size: var(--fs-h3);
+}
+h4{
+    font-size: var(--fs-h4);
 }
 html{
     scroll-behavior: smooth;
@@ -60,7 +59,7 @@ body {
 }
 
 section {
-    padding: 5em 2em;
+    padding: 5em 1em;
 }
 
 img {
@@ -136,9 +135,7 @@ h3 {
 
 .section__subtitle--intro,
 .section__subtitle--about {
-    padding: .25em 1em;
     font-family: var(--ff-secondary);
-    margin-bottom: 1em;
     position: relative;
     color: var(--color-light);
     font-size: var(--fs-h3);
@@ -146,7 +143,7 @@ h3 {
 .banner-text{
     position: absolute;
     top: -0.05rem;
-    left: 14rem; 
+    left: 8rem; 
     right: 0rem; 
     margin-left: auto; 
     margin-right: auto;
@@ -154,6 +151,7 @@ h3 {
 }
 .banner {
     width: 100%;
+    min-height: 68px;
 }
 
 .section__title--work{
@@ -212,6 +210,65 @@ header {
 .nav__link:hover {
     color: var(--color-accent);
 }
+@media (min-width: 800px){
+    .nav{
+        display: flex;
+        transform: translateX(0);
+        color: var(--color-dark);
+        background-color: transparent;
+        position: static;
+        margin: 0 auto;
+        font-family: var(--ff-quick);
+    }
+    .nav__list{
+        flex-direction: row;
+        justify-content: center;
+
+    }
+    .nav__item{
+        padding: 0 3rem;
+    }
+    .nav__item a{
+        text-decoration: none;
+        display: block;
+        position: relative;
+    }
+    .nav__item a::after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0.1em;
+        background-color: var(--color-medium);
+        opacity: 0;
+        transition: opacity 300ms, transform 300ms;
+    }
+    a:hover::after,
+    a:focus::after {
+    opacity: 1;
+    transform: translate3d(0, 0.2em, 0);
+    }
+    .nav__list li a{
+        overflow: hidden;
+    }
+    .nav__list li a::after{
+        opacity: 1;
+        transform: translate3d(-100%, 0, 0);
+    }
+    .nav__list li a:hover::after,
+    .nav__list li a:focus::after{
+    transform: translate3d(0, 0, 0);
+    }
+
+    .hamburger{
+        display: none;
+    }
+    .nav-toggle{
+        display: none;
+    }
+}
+
 
 .nav-toggle {
     padding: .5em;
@@ -282,10 +339,20 @@ header {
     position: relative;
     padding-bottom: 10rem;
 }
+.intro-round{
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    background-color: var(--color-accentTwo);
+    position: relative;
+    z-index: 2;
+    margin-top: 2rem;
+}
 
 
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
     .intro {
         display: grid;
         max-width: 800px;
@@ -297,13 +364,9 @@ header {
         justify-items: center;
     }
     .intro-round{
-        border-radius: 50%;
         width: 400px;
         height: 400px;
-        overflow: hidden;
-        background-color: var(--color-accentTwo);
-        position: relative;
-        z-index: 2;
+
     }
 
     .intro__img {
@@ -332,8 +395,13 @@ header {
     text-transform: uppercase;
     position: absolute;
     right: 6rem;
-    left: 0;
     top: 1.3rem;
+}
+@media (max-width: 600px){
+    .banner-text-container{
+        left: 1rem;
+        width: 290px;
+    }
 }
 .animate span {
 	display: inline-block;
@@ -479,45 +547,65 @@ header {
     margin-top: 22em;
 }
 
+@media (max-width: 850px){
+    .skills {
+        flex-direction: column;
+        gap: 0.2rem;
+    }
+    .skills-container{
+        height: auto;
+    }
+    .skills-wrapper{
+        position: relative;
+    }
+    .skill{
+        border-radius: 20px;
+    }
+    .skill:last-child{
+        border-left-color: var(--color-light-dark);
+    }
+    .skill:first-child{
+        border-right-color: var(--color-light-dark);
+    }
+    .work-btn{
+        margin-top: 4rem;
+    }
+}
+
 
 
 /* About me */
 .about-me {
     max-width: 1000px;
+    padding: 14rem 0;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
 }
+.about-me h3{
+    color: var(--color-dark);
+    padding: 1.5rem 0;
+}
+.about-me-container{
+    max-width: 600px;
+    text-align: left;
+    line-height: 1.8rem;
+}
+.about-me-img{
+    max-width: 250px;
+}
 
-@media (min-width: 600px) {
-    .about-me {
-        display: grid;
-        grid-template-columns: 1fr 250px;
-        grid-template-areas:
-            "title img"
-            "subtitle img"
-            "text img";
-        grid-column-gap: 1em;
+@media (max-width: 910px){
+    .about-me{
+        flex-direction: column;
     }
-
-    .section__subtitle--about {
-        grid-area: title;
-    }
-
-    .section__subtitle--about {
-        grid-column: 1 / -1;
-        grid-row: 2;
-        position: relative;
-        left: -1em;
-        width: calc(100% + 2em);
-        padding-left: 1em;
-        padding-right: calc(200px + 4em);
-    }
-
-    .about-me__img {
-        grid-area: img;
-        position: relative;
-        z-index: 2;
+    .about-me-container{
+        padding: 0 1rem;
     }
 }
+
 
 
 
@@ -538,20 +626,20 @@ header {
 .card-item{
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    width: 550px;
-    height: 550px;
+    width: 580px;
+    height: 430px;
     border-radius: 10px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.44);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     overflow: hidden;
 }
 .card-item:hover{
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.42);
 }
 .card-item:hover img {
-    transform: scale(1.25);
+    transform: scale(1.15);
   }
 .card-item-img{
     height: 100%;
@@ -566,34 +654,92 @@ header {
 }
 .card-item figcaption{
     position: absolute;
-    bottom: -70%;
+    bottom: -81%;
+    height: 430px;
     left: 0;
     width: 100%;
     margin: 0;
     padding: 30px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.85);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     color: white;
     line-height: 1;
     transition: 0.25s;
 }
 .card-item-header{
-    margin: 0 0 20px;
-    padding: 0;
+    padding-bottom: 5rem;
 }
 .card-item-info{
     font-size: 14px;
     line-height: 1.75;
+
+}
+@media (max-width: 660px){
+    .card-item{
+        height: 380px;
+    }
+    .card-item figcaption{
+        height: 380px;
+        bottom: -68%;
+    }
+}
+@media (max-width: 540px){
+    .card-item{
+        height: 320px;
+    }
+    .card-item figcaption{
+        height: 320px;
+        bottom: -68%;
+    }
+    .card-item-header{
+        padding-bottom: 1rem;
+    }
+}
+@media (max-width: 430px){
+    .card-item{
+        height: 290px;
+    }
+    .card-item figcaption{
+        height: 290px;
+        bottom: -68%;
+    }
+    .card-item-header{
+        padding-bottom: 1rem;
+    }
+}
+@media (max-width: 360px){
+    .card-item{
+        margin: 0;
+        height: 280px;
+        margin-top: 1rem;
+    }
+    .card-item figcaption{
+        height: 280px;
+        bottom: -68%;
+    }
+    .card-item-header{
+        padding-bottom: 1rem;
+    }
+    .card-item-info h4{
+        font-size: var(--fs-body);
+    }
+    .card-item-info p{
+        margin-bottom: 0.2rem;
+    }
+    .btn{
+        padding: 0.6em 1.1em;
+    }
 }
 
 
 /* Footer */
 .footer {
-    background: #111;
-    color: var(--color-accent);
+    background: var(--color-accentTwo);
+    color: var(--color-light);
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
+    clip-path: ellipse(66% 100% at 50% 100%);
 }
 
 .footer a {
@@ -607,11 +753,9 @@ header {
 .footer__link:hover,
 .social-list__link:hover {
     opacity: .7;
+    transform: scale(1.45);
 }
 
-.footer__link:hover {
-    text-decoration: underline;
-}
 
 .social-list {
     list-style: none;
