--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,7 @@ header {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
 }
 .card-item{
     position: relative;
@@ -634,6 +635,8 @@ header {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.44);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     overflow: hidden;
+    margin: 0;
+    
 }
 .card-item:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.42);
@@ -647,6 +650,8 @@ header {
 }
 .card-item:hover figcaption{
     bottom: 0;
+    background-color: rgba(0, 0, 0, 0.85);
+    color: white;
 }
 .card-item-img{
     height: 100%;
@@ -660,9 +665,9 @@ header {
     width: 100%;
     margin: 0;
     padding: 30px;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    color: white;
+    color: var(--color-medium);
     line-height: 1;
     transition: 0.25s;
 }
@@ -674,37 +679,40 @@ header {
     line-height: 1.75;
 
 }
-@media (max-width: 660px){
+/* @media (max-width: 660px){
     .card-item{
-        height: 380px;
+        height: 390px;
     }
     .card-item figcaption{
         height: 380px;
         bottom: -68%;
     }
-}
+} */
 @media (max-width: 540px){
     .card-item{
-        height: 320px;
+        height: 370px;
     }
     .card-item figcaption{
-        height: 320px;
-        bottom: -68%;
+        height: 370px;
+        bottom: -75%;
     }
     .card-item-header{
         padding-bottom: 1rem;
     }
 }
-@media (max-width: 430px){
+@media (max-width: 450px){
     .card-item{
-        height: 290px;
+        height: 300px;
     }
     .card-item figcaption{
-        height: 290px;
-        bottom: -68%;
+        height: 300px;
+        bottom: -70%;
     }
     .card-item-header{
         padding-bottom: 1rem;
+    }
+    .btn{
+        padding: 0.6em 1.1em;
     }
 }
 @media (max-width: 360px){
