--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ strong {
 
 .btn {
     display: inline-block;
-    padding: 1em 2.1em;
+    padding: 0.9rem 1.4rem;
     background: var(--color-accentTwo);
     color: var(--color-light);
     text-decoration: none;
@@ -621,14 +621,25 @@ header {
 
 .my-work-banner{
     background-color: var(--color-accentTwo);
-    width: 20%;
+    width: 330px;
     color: var(--color-light);
     text-align: center;
     padding: 0.1rem;
     margin: 1rem auto;
     border-radius: 20px;
-    /* box-shadow: 10px 10px rgb(151, 151, 151); */
+    /* animation: bounce 5s ease-in-out infinite; */
 }
+@keyframes bounce {
+    0% {
+      transform: translatey(0px);
+    }
+    50% {
+      transform: translatey(-20px);
+    }
+    100% {
+      transform: translatey(0px);
+    }
+  }
 .pointer{
     height: 40px;
 	width: 40px;
@@ -640,6 +651,18 @@ header {
 	position: relative;
 	left: calc(0.5vw - 10px);
 }
+/* @keyframes bounce2 {
+    0% {
+      transform: translatey(0px);
+    }
+    50% {
+      transform: translatey(-20px);
+    }
+    100% {
+      transform: translatey(0px);
+      transform: rotate(90deg);
+    }
+  } */
 
 .my-work {
     background-color: var(--color-light);
@@ -672,6 +695,7 @@ header {
 }
 .card-item:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.42);
+   
 }
 .card-item:hover img {
     transform: scale(1.15);
@@ -744,8 +768,12 @@ header {
         height: 370px;
         bottom: -75%;
     }
+    .card-item-img{
+        background-size: cover;
+        background-position: 50% 50%;
+    }
 }
-@media (max-width: 450px){
+/* @media (max-width: 450px){
     .card-item{
         height: 300px;
     }
@@ -755,29 +783,8 @@ header {
     }
     .btn{
         padding: 0.6em 1.1em;
-    }
-    
-}
-@media (max-width: 360px){
-    .card-item{
-        margin: 0;
-        height: 280px;
-        margin-top: 1rem;
-    }
-    .card-item figcaption{
-        height: 280px;
-        bottom: -68%;
-    }
-    .card-item-info h4{
-        font-size: var(--fs-body);
-    }
-    .card-item-info p{
-        margin-bottom: 0.2rem;
-    }
-    .btn{
-        padding: 0.6em 1.1em;
-    }
-}
+    }   
+} */
 
 
 /* Footer */
