--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,8 @@ header {
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 0.1em;
+        height: 0.2em;
+        border-radius: 50%;
         background-color: var(--color-medium);
         opacity: 0;
         transition: opacity 300ms, transform 300ms;
@@ -266,8 +267,8 @@ header {
         opacity: 1;
         transform: translate3d(-100%, 0, 0);
     }
-    .nav__list li a:hover::after,
-    .nav__list li a:focus::after{
+    .nav__list li a:focus::after,
+    .nav__list li a:hover::after{
     transform: translate3d(0, 0, 0);
     }
 
@@ -359,7 +360,12 @@ header {
     z-index: 2;
     margin: 0 auto;
     margin-top: 2rem;
+
 }
+.intro-round img:hover{
+    animation: FadeIn 0.8s ease;
+}
+
 .section__title--intro{
     margin: 0 auto;
     width: 20rem;
@@ -368,6 +374,7 @@ header {
     margin: 0 auto;
     top: 1rem;
 }
+
 .banner-text-container{
     left: 50%;
     transform: translate(-50%, 0);
@@ -377,6 +384,31 @@ header {
     text-transform: uppercase;
 }
 
+@keyframes FadeIn {
+	0% {
+		opacity: 0.3;
+	}
+    /* 50% {
+		opacity: 0.6;
+	} */
+	100% {
+		opacity: 1;
+	}
+}
+
+
+@keyframes TitleBounce {
+	0% {
+		transform: translateY(0);
+	}
+    50% {
+		transform: translateY(0.5rem);
+	}
+
+	100% {
+		transform: translateY(0);
+	}
+}
 
 @media (min-width: 800px) {
     .intro {
@@ -404,7 +436,13 @@ header {
         min-width: 300px;
     }
     .section__title--intro:hover {
-        transform: rotate(5deg);
+        animation: TitleBounce 1.8s ease-in-out;
+        animation-iteration-count: infinite;
+    }
+
+    .section__title--intro:hover::after {
+        transition: all 0.2s;
+        
     }
 
     .section__subtitle--intro {
@@ -496,7 +534,7 @@ header {
 
 .my-skills {   
     /* background-image: url(../images/laptop.jpg); */
-    background-color: var(--color-accentTwo);
+    background-color: var(--color-light-dark);
     background-size: cover;
     color: var(--color-light);
     text-align: center;
@@ -504,7 +542,7 @@ header {
 }
 
 .section__title--skills {
-    color: var(--color-light);
+    color: var(--color-dark);
     position: relative;
     padding-bottom: 12rem;
 }
@@ -710,7 +748,7 @@ header {
     justify-content: center;
     max-width: 580px;
     height: 430px;
-    border-radius: 10px;
+    border-radius: 1rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.44);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     overflow: hidden;
@@ -731,7 +769,7 @@ header {
 }
 .card-item:hover figcaption{
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.89);
+    background-color: rgba(41, 41, 41, 0.99);
     color: white;
 }
 
