--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,10 @@ h3 {
     font-size: var(--fs-h3);
 }
 
-
+.flex{
+    display: flex;
+    justify-content: center;
+}
 
 .section__title--intro {
     font-weight: var(--fw-reg);
@@ -345,6 +348,7 @@ header {
 }
 
 
+/* Cirlcles  EFFECT*/
 .circles-main{
     position: relative;
 }
@@ -357,12 +361,13 @@ header {
 .circles-main::before{
     right: 10rem;
     bottom: -29rem;
-    height: 16rem;
-    width: 16rem;
-    border-radius: 16rem;
+    height: 18rem;
+    width: 18rem;
+    border-radius: 18rem;
     background: linear-gradient(#3800e7, #8a15ff);
-    -webkit-animation: gradient-fade 6s ease-in-out 2s infinite alternate;
-    animation: gradient-fade 6s ease-in-out 2s infinite alternate;
+    -webkit-animation: gradient-fade 7s ease-in-out 3s infinite alternate;
+    animation: gradient-fade 7s ease-in-out 3s infinite alternate;
+    animation-delay: 200ms;
 }
 .circles-main::after{
     top: 0;
@@ -371,8 +376,10 @@ header {
     width: 10rem;
     border-radius: 10rem;
     background: linear-gradient(#3800e7, #8a15ff);
-    -webkit-animation: gradient-fade-alt 6s ease-in-out 3s infinite alternate;
-            animation: gradient-fade-alt 6s ease-in-out 3s infinite alternate;
+    animation-delay: 500ms;
+    -webkit-animation: gradient-fade-alt 6s ease-in-out 2s infinite alternate;
+            animation: gradient-fade-alt 6s ease-in-out 2s infinite alternate;
+    animation-delay: 200ms;
 }
 
 .circles-child{
@@ -393,8 +400,21 @@ header {
     opacity: 0.7;
     border-radius: 18rem;
     background: linear-gradient(#15e0ff, #8a15ff);
-    -webkit-animation: rotation 7s linear infinite;
-            animation: rotation 7s linear infinite;
+    -webkit-animation: rotation 6s linear infinite;
+            animation: rotation 6s linear infinite;
+  }
+  .circles-child:after {
+    /* z-index: -1; */
+    top: 40rem;
+    right: 10rem;
+    width: 8rem;
+    height: 8rem;
+    opacity: 0.7;
+    border-radius: 8rem;
+    background: linear-gradient(#0c53c7, #8a15ff);
+    -webkit-animation: gradient-fade-alt 7s ease-in-out 3s infinite alternate;
+            animation: gradient-fade-alt 7s ease-in-out 3s infinite alternate;
+    animation-delay: 200ms;
   }
 
 @keyframes gradient-fade {
@@ -806,18 +826,19 @@ header {
 	position: relative;
 	left: calc(0.5vw - 10px);
 }
-/* @keyframes bounce2 {
-    0% {
-      transform: translatey(0px);
-    }
-    50% {
-      transform: translatey(-20px);
-    }
-    100% {
-      transform: translatey(0px);
-      transform: rotate(90deg);
-    }
-  } */
+.pointer-anim{
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: bounce2;
+    animation-timing-function: ease;
+}
+@keyframes bounce2 {
+    0%   { transform: scale(1,1)    translateY(0); }
+    10%  { transform: scale(1.1,.9) translateY(0); }
+    30%  { transform: scale(.9,1.1) translateY(-80px); }
+    50%  { transform: scale(1,1)    translateY(0); }
+    100% { transform: scale(1,1)    translateY(0); }
+}
 
 .my-work {
     background-color: var(--color-light);
