--- a/css/style.css
+++ b/css/style.css
@@ -864,13 +864,14 @@ header {
     height: 430px;
     border-radius: 1rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.44);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: all 0.35s cubic-bezier(0.25, 0.8, 0.25, 1);
     overflow: hidden;
     margin: 0;
     
 }
 .card-item:hover{
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.42);
+    box-shadow: 0 10px 14px rgba(0, 0, 0, 0.25), 0 6px 6px rgba(0, 0, 0, 0.42);
+    transform: scale(1.025);
    
 }
 .card-item:hover img {
